# jarvis

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  mcp-servers.json
mcp/: code.md  exa.py  hack.md  plan.md  server.py  system.md  tools.md
src/: HTTPTransport.cpp  HTTPTransport.h  MCP.cpp  MCP.h  MCPConnection.cpp  MCPConnection.h  MCPManager.cpp  MCPManager.h  Microphone.cpp  Microphone.h  Ollama.cpp  Ollama.h  StdioTransport.cpp  StdioTransport.h  Transport.h  Whisper.cpp  Whisper.h  main.cpp
